--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,13 @@ body {
 }
 /* Nav Var */
 nav {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 0 24px;
     border-bottom: 1px solid var(--very-light-pink);
+    background-color: var(--white);
+    z-index: 1;
 }
 .menu {
     display: none;
@@ -86,6 +89,14 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.dark{
+    width: 100%;
+    height: calc(100%);
+    top: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 0;
 }
 /* desktop menu */
 .desktop-menu {
@@ -256,6 +267,7 @@ aside {
     height: 240px;
     border-radius: 20px;
     object-fit: cover;
+    cursor: pointer;
 }
 .cards-container .product-info {
     display: flex;
@@ -289,8 +301,13 @@ aside {
 #productDetailContainer {
     width: 360px;
     padding-bottom: 24px;
-    position: absolute;
-    right: 0;
+    position: fixed;
+    top: 120px;
+    right: 50%;
+    transform: translate(50%,0);
+    padding: 12px;
+    border-radius: 20px;
+
 }
 .product-detail-close {
     background: var(--white);
@@ -311,7 +328,7 @@ aside {
     width: 100%;
     height: 360px;
     object-fit: cover;
-    border-radius: 0 0 20px 20px;
+    border-radius: 20px;
 }
 #productDetailContainer .product-info {
     margin: 24px 24px 0 24px;
